# qgroundcontrol

./: .gitignore  qgcimages.qrc  qgroundcontrol.pro
src/ADSB/: ADSBTCPLink.cc  ADSBTCPLink.h  ADSBVehicle.cc  ADSBVehicle.h  ADSBVehicleManager.cc  ADSBVehicleManager.h  CMakeLists.txt  MavlinkDecoder.cc  MavlinkDecoder.h  SBS1Decoder.cc  SBS1Decoder.h  TCPLinkController.cc  TCPLinkController.h  qmake_qmake_qm_files.qrc
src/FlightDisplay/: FlyViewMap.qml
src/FlightMap/MapItems/: VehicleMapItem.qml
src/Settings/: ADSBVehicleManager.SettingsGroup.json  ADSBVehicleManagerSettings.cc  ADSBVehicleManagerSettings.h
src/Utilities/: QGCLoggingCategory.h
src/ui/preferences/: ADSBServerSettings.qml
